force-app/main/default/objects/Quote/fields/CARE_End__c.field-meta.xml
<CustomField>
    <fullName>CARE_End__c</fullName>
    <label>CARE End</label>
    <type>Date</type>
</CustomField>