force-app/main/default/objects/Quote/fields/CARE_Start__c.field-meta.xml
<CustomField>
    <fullName>CARE_Start__c</fullName>
    <label>CARE Start</label>
    <type>Date</type>
</CustomField>